--- a/index.html
+++ b/index.html
@@ -48,17 +48,22 @@
                 <h5 id="title">Full-Stack Software Engineer, Entrepreneur</h5>
                 <hr>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a class="btn btn-default" href="./Files/TechnicalRESUME.pdf" target="_blank">
-                        <span class="fa fa-archive"></span>    Technical Resume</a>
-                    <a class="btn btn-default" href="./Files/BusinessRESUME.pdf" target="_blank">
-                        <span class="fa fa-archive"></span>    Business Resume</a>
-                    <a class="btn btn-social btn-linkedin" href="https://www.linkedin.com/in/bmteo/" target="_blank">
-                        <span class="fa fa-linkedin"></span>LinkedIn</a>
-                    <a class="btn btn-social btn-github" href="https://github.com/bmteo" target="_blank">
-                        <span class="fa fa-github"></span>GitHub</a>
-                    <a class="btn btn-social btn-twitter" href="https://twitter.com/bmteo2" target="_blank">
-                        <span class="fa fa-twitter"></span>Twitter</a>
+                    <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/bmteo/" target="_blank">
+                        <span class="fa fa-linkedin"></span></a>
+                    <a class="btn btn-social-icon btn-github" href="https://github.com/bmteo" target="_blank">
+                        <span class="fa fa-github"></span></a>
+                    <a class="btn btn-social-icon btn-twitter" href="https://twitter.com/bmteo2" target="_blank">
+                        <span class="fa fa-twitter"></span></a>
                 </div>
+                <br>
+                <br>
+                <br>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a class="btn btn-default" href="./Files/TechnicalRESUME.pdf" target="_blank">
+                    <span class="fa fa-archive"></span>    Technical Resume</a>
+                <a class="btn btn-default" href="./Files/BusinessRESUME.pdf" target="_blank">
+                    <span class="fa fa-archive"></span>    Business Resume</a>
+                  </div>
             </div>
         </div>
     </header>
