--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <br>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a class="btn btn-default" href="./Files/TechnicalRESUME.pdf" target="_blank">
-                    <span class="fa fa-archive"></span>    Technical Resume</a>
+                    <span class="fa fa-archive"></span>     Resume</a>
                   </div>
             </div>
         </div>
