--- a/blog.html
+++ b/blog.html
@@ -81,20 +81,20 @@
 		</div>
 
 		<div id="fh5co-portfolio">
+			<div class="fh5co-portfolio-item fh5co-img-right">
+				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/hsgraduation.png);"></div>
+				<div class="fh5co-portfolio-description">
+					<h2>A Plan</h2>
+					<p>An reflection on my four years at UBC for my graduation capstone class.</p>
+					<p><a href="personaldevelopment.html" class="btn btn-primary">Read</a></p>
+				</div>
+			</div>
 			<div class="fh5co-portfolio-item ">
 				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/teamphoto.jpg);"></div>
 				<div class="fh5co-portfolio-description">
 					<h2>Avoiding the Monotony of Life</h2>
 					<p>A short rant about living a boring life.</p>
 					<p><a href="monotony.html" class="btn btn-primary">Read</a></p>
-				</div>
-			</div>
-			<div class="fh5co-portfolio-item fh5co-img-right">
-				<div class="fh5co-portfolio-figure animate-box" style="background-image: url(images/teamphoto.jpg);"></div>
-				<div class="fh5co-portfolio-description">
-					<h2>placeholder</h2>
-					<p>placeholder</p>
-					<p><a href="#" class="btn btn-primary">placeholder</a></p>
 				</div>
 			</div>
 		</div>
